adding stuff done over spring 17 semester

--- a/analysis/SDSS_se_params.cfg
+++ b/analysis/SDSS_se_params.cfg
@@ -1,3 +1,21 @@
+[BRIGHT3]
+-c = config.sex
+-detect_minarea = 5
+-detect_thresh = 1.5
+-deblend_nthresh = 16
+-back_size = 32
+-back_filtersize = 5
+-deblend_mincont = 0.002
+
+[BRIGHT2]
+-c = config.sex
+-detect_minarea = 5
+-detect_thresh = 1.5
+-deblend_nthresh = 16
+-back_size = 32
+-back_filtersize = 5
+-deblend_mincont = 0.002
+
 [BRIGHT]
 -c = config.sex
 -detect_minarea = 4
@@ -6,11 +24,33 @@
 -back_size = 400
 -back_filtersize = 5
 -deblend_mincont = 0.002
--phot_apertures = [6, 8, 10, 12, 20]
--phot_autoparams = [2.5, 3.5]
--phot_petroparams = [2.0, 3.5]
--catalog_type = ASCII_HEAD
 
+[FAINT4]
+-c = config.sex
+-detect_minarea = 18
+-detect_thresh = 1.1
+-deblend_nthresh = 64
+-back_size = 100
+-back_filtersize = 3
+-deblend_mincont = 0.05
+
+[FAINT3]
+-c = config.sex
+-detect_minarea = 15
+-detect_thresh = 1.2
+-deblend_nthresh = 64
+-back_size = 32
+-back_filtersize = 3
+-deblend_mincont = 0.1
+
+[FAINT2]
+-c = config.sex
+-detect_minarea = 30
+-detect_thresh = 1.2
+-deblend_nthresh = 64
+-back_size = 32
+-back_filtersize = 3
+-deblend_mincont = 0.075
 
 [FAINT]
 -c = config.sex
